--- a/lab17/index.html
+++ b/lab17/index.html
@@ -13,6 +13,8 @@
     <div class="inner__html"></div>
 
     <script src="script.js"></script>
+    <h3>Hoàng Văn Hiệu</h3>
+  
   </body>
 </html>
 <!--  tìm hiểu về BOM -->
