--- a/lab18/index.html
+++ b/lab18/index.html
@@ -11,8 +11,9 @@
 <body>
     <div class="card">
         <div class="card-info">
-          <div class="card title">Tên sản phẩm</div>
+          <div class="card-title">Tên sản phẩm</div>
           <div class="card-description">Mô tả </div>
+          <div class="card-image"></div>
         </div>
       </div>
     <script src="index.js"></script>
