--- a/lab18/index.html
+++ b/lab18/index.html
@@ -2,21 +2,45 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="index.css">
+  <title>Document</title>
+  <style>
+
+
+
+  </style>
 </head>
 
 <body>
-    <div class="card">
-        <div class="card-info">
-          <div class="card-title">Tên sản phẩm</div>
-          <div class="card-description">Mô tả </div>
-          <div class="card-image"></div>
-        </div>
-      </div>
-    <script src="index.js"></script>
+  <div class="card">
+    <div class="card-info">
+      <div class="card-title">Tên sản phẩm</div>
+      <div class="card-description">Mô tả </div>
+      <div class="card-image"></div>
+    </div>
+  </div>
+  <script src="index.js"></script>
+  <!-- <div class="list">
+    <div class="item">
+      <img src="anh.jpg" alt="">
+    </div>
+    <div class="item">
+      <img src="anh.jpg" alt="">
+    </div>
+    <div class="item">
+      <img src="anh.jpg" alt="">
+    </div>
+    <div class="item">
+      <img src="anh.jpg" alt="">
+    </div>
+    <div class="item">
+      <img src="anh.jpg" alt="">
+    </div> -->
+  </div>
+
 </body>
 
 </html>
