--- a/lab20/index (1).html
+++ b/lab20/index (1).html
@@ -1,60 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>TodoApp</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <div id="app">
-            <h1 class="heading">Simple TodoApp</h1>
 
-            <form class="create__form">
-                <div class="form__field">
-                    <input type="text" class="form__control" />
-                    <button class="form__button">Create</button>
-                </div>
-            </form>
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TodoApp</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+</head>
 
-            <form action="" class="filter__form">
-                <div class="form__field">
-                    <input
-                        class="form__control"
-                        type="radio"
-                        name="filter"
-                        value="all"
-                        id="all"
-                    />
-                    <label class="form__label" for="all">All</label>
-                </div>
+<body>
+    <div id="app">
+        <h1 class="heading">Simple TodoApp</h1>
 
-                <div class="form__field">
-                    <input
-                        class="form__control"
-                        type="radio"
-                        name="filter"
-                        value="active"
-                        id="active"
-                    />
-                    <label class="form__label" for="active">Active</label>
-                </div>
+        <form class="create__form">
+            <div class="form__field">
+                <input type="text" class="form__control" />
+                <button class="form__button">Create</button>
+            </div>
+        </form>
 
-                <div class="form__field">
-                    <input
-                        class="form__control"
-                        type="radio"
-                        name="filter"
-                        value="completed"
-                        id="completed"
-                    />
-                    <label class="form__label" for="completed">Active</label>
-                </div>
-            </form>
+        <form action="" class="filter__form">
+            <div class="form__field">
+                <input class="form__control" type="radio" name="filter" value="all" id="all" />
+                <label class="form__label" for="all">All</label>
+            </div>
 
-            <ul class="todo__list">
-                <!-- <li class="todo__item">
+            <div class="form__field">
+                <input class="form__control" type="radio" name="filter" value="active" id="active" />
+                <label class="form__label" for="active">Active</label>
+            </div>
+
+            <div class="form__field">
+                <input class="form__control" type="radio" name="filter" value="completed" id="completed" />
+                <label class="form__label" for="completed">Completed</label>
+            </div>
+        </form>
+
+        <ul class="todo__list">
+            <!-- <li class="todo__item">
                     <input type="checkbox" class="todo__checkbox" />
                     <span class="todo__title">Nội dung công việc</span>
                     <button class="todo__delete__button">Delete</button>
@@ -71,17 +56,21 @@
                     <span class="todo__title">Nội dung công việc</span>
                     <button class="todo__delete__button">Delete</button>
                 </li> -->
-            </ul>
+        </ul>
 
-            <div class="todo__summary">
-                <p class="todo__count">
-                    Bạn có <span class="todo__count__value">0</span> công việc
-                    chưa hoàn thành
-                </p>
+        <div class="todo__summary">
+            <p class="todo__count">
+                Bạn có <span class="todo__count__value">0</span> công việc
+                chưa hoàn thành
+            </p>
 
-                <button class="todo__clear__button">Clear</button>
-            </div>
+            <button class="todo__clear__button">Clear</button>
         </div>
-        <script src="script.js"></script>
-    </body>
+    </div>
+    <script src="main.js">
+        // const trashEL = document.querySelector(".todo_delete__button");
+        trashEL.innerHTML = `<i class="fa-sharp fa-solid fa-trash"></i>`
+    </script>
+</body>
+
 </html>
