--- a/lab20/index (1).html
+++ b/lab20/index (1).html
@@ -67,7 +67,7 @@
             <button class="todo__clear__button">Clear</button>
         </div>
     </div>
-    <script src="main.js">
+    <script src="script.js">
         // const trashEL = document.querySelector(".todo_delete__button");
         trashEL.innerHTML = `<i class="fa-sharp fa-solid fa-trash"></i>`
     </script>
