--- a/lab22/play__list/tao_List_nhac.html
+++ b/lab22/play__list/tao_List_nhac.html
@@ -58,7 +58,7 @@
 
         <!-- Playlist -->
         <div class="playlist">
-            <div class="song">
+            <!-- <div class="song">
                 <div class="thumb"
                     style="background-image: url('https://i.ytimg.com/vi/jTLhQf5KJSc/maxresdefault.jpg')">
                 </div>
@@ -93,12 +93,12 @@
                 <div class="option">
                     <i class="fas fa-ellipsis-h"></i>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 
-    <script src="list__nhac.js"></script>
+    <script src="nhac.js"></script>
 
 </body>
 
