--- a/lab22/card.html
+++ b/lab22/card.html
@@ -58,7 +58,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.min.js"
         integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
-    <script src="shopping__card.js"></script>
+    <script src="card.js"></script>
 </body>
 
 </html>
